# jack-tools

./: .boring  .gitignore  .gitmodules  Makefile  Makefile.am  README  README.md  cabal.project  configure.ac  jack-dl.ad  jack-dl.c  jack-dl.h  jack-dl.text  jack-lxvst.cpp  jack-osc.c  jack-osc.text  jack-play-sc3  jack-play.ad  jack-play.c  jack-play.text  jack-plumbing.c  jack-plumbing.text  jack-record.c  jack-record.text  jack-scope.ad  jack-scope.c  jack-scope.text  jack-transport.c  jack-transport.text  jack-udp.c  jack.dl.1  jack.dl.c  jack.dl.h  jack.dl.text  jack.osc.1  jack.osc.c  jack.osc.text  jack.play.1  jack.play.c  jack.play.text  (+16 more)
Sound/RJU/: LXVST.hs
Sound/Rju/: LxVst.hs
cmd/: Makefile  args.c  args.h  jack-data.c  jack-dl.c  jack-dl.h  jack-dx7.cpp  jack-level.c  jack-lxvst.cpp  jack-osc.c  jack-play.c  jack-plumbing.c  jack-record.c  jack-scope.c  jack-transport.c  lxvst-query.cpp  rju-data.c  rju-dl.c  rju-dl.h  rju-level.c  rju-lxvst.cpp  rju-osc.c  rju-play.c  rju-plumbing.c  rju-record.c  rju-record.h  rju-scope.c  rju-transport.c  rju-udp.c  status.c  status.h  status_curses.c  status_curses.h  status_json.c  status_json.h  status_utils.c  status_utils.h
cmd/contrib/: inotify.c
cmd/dx7/: Makefile  README  aligned_buf.h.patch  dexed.patch
cmd/lib/: Makefile
common/: Makefile.am  byte-order.c  byte-order.h  client.c  client.h  file.c  img-ppm.c  img.c  jack-client.c  jack-client.h  jack-port.c  jack-port.h  jack-ringbuffer.c  jack-transport.c  memory.c  network.c  observe-signal.c  osc.c  osc.h  signal-clip.c  signal-copy.c  signal-interleave.c  signal-interpolate.c  signal-print.c  sound-file.c  time-current.c  time-ntp.c  time-timespec.c  time-timeval.c  ximg.c  xregcomp.c
help/: Makefile  lxvst.hs  osc.hs  scope-ui.scd  scope.scm  sin.c  sin.scm  transport-ws.hs
help/plumbing/: dl-scope.text  mpv-scope.text  nil-scope.text  play-sc3.text  play-scope.text  sc3-jaaa.text  sc3-japa.text  sc3-record.text  sc3-scope.text  system-scope.text
md/: announce.md  fox-recorder.md  jack-data.md  jack-dl.md  jack-level.md  jack-lxvst.md  jack-osc.md  jack-play.md  jack-plumbing.ad  jack-plumbing.md  jack-record.md  jack-scope.md  jack-transport.md  jack-udp.md  rju-data.md  rju-dl.md  rju-level.md  rju-lxvst.md  rju-osc.md  rju-play.md  rju-plumbing.md  rju-record.md  rju-scope.md  rju-transport.md  rju-udp.md
md/announce/: clock.text  osc.text  play.text  plumbing.1.text  plumbing.2.text  plumbing.3.text  plumbing.4.text  record.text  scope.text  udp.text
src/: args.c  args.h  recorder.c  recorder.h  status.c  status.h  status_curses.h  status_json.h  status_utils.c  status_utils.h
src/lib/: Makefile  failure.h  file.h  jack-client.c  jack-client.h  jack-port.c  jack-port.h  logging.c  logging.h
