Cabal-Version:     2.4
Name:              rju
Version:           0.20
Synopsis:          rju
Description:       rju utils
License:           GPL-3.0-only
Category:          Sound
Copyright:         (c) Rohan Drape, 2003-2022
Author:            Rohan Drape
Maintainer:        rd@rohandrape.net
Stability:         Experimental
Homepage:          http://rohandrape.net/t/rju
Tested-With:       GHC == 8.8.4
Build-Type:        Simple
Data-Files:        README.md

Library
  Build-Depends:   base >= 4.8 && < 5,
                   hosc == 0.20
  GHC-Options:     -Wall -fwarn-tabs
  Exposed-modules: Sound.RJU.LXVST
  default-language:Haskell2010

source-repository  head
  type:            git
  location:        https://gitlab.com/rd--/rju
