
MAINTAINERCLEANFILES =	Makefile.in

noinst_LIBRARIES = libcommon.a

libcommon_a_SOURCES =	byte-order.c byte-order.h \
			client.c client.h \
			failure.h \
			file.c file.h \
			float.h \
			img.c img.h \
			img-ppm.c img-ppm.h \
			int.h \
			jack-client.c jack-client.h \
			jack-port.c jack-port.h \
			jack-ringbuffer.c jack-ringbuffer.h \
			jack-transport.c jack-transport.h \
			memory.c memory.h \
			network.c network.h \
			observe-signal.c observe-signal.h \
			osc.c osc.h \
			print.h \
			signal-clip.c signal-clip.h \
			signal-copy.c signal-copy.h \
			signal-interleave.c signal-interleave.h \
			signal-interpolate.c signal-interpolate.h \
			signal-print.c signal-print.h \
			sound-file.c sound-file.h \
			time-current.c time-current.h \
			time-ntp.c time-ntp.h \
			time-timespec.c time-timespec.h \
			time-timeval.c time-timeval.h \
			ximg.c ximg.h \
			xregcomp.c xregcomp.h
